# AgeOfAnarchy

./: .gitignore  CMakeLists.txt  readme.md
cmake/: macros.cmake
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c  glad.h
resources/: CMakeLists.txt
resources/models/: cube.3d  sphere.3d
resources/shaders/: default.frag  default.vert  frag.spv  vert.spv
src/: CMakeLists.txt  main.c
src/common/: CMakeLists.txt
src/common/headers/: common.h  list.h
src/common/intern/: list.c
src/core/: CMakeLists.txt
src/core/headers/: core.h
src/core/intern/: context.c  context.h  loading.c  loading.h  main_loop.c  main_loop.h  player.c  player.h  sprite.c  sprite.h  title_screen.c  title_screen.h  world.c  world.h
src/memory/intern/: alloc_light_impl.c  alloc_secured_impl.c
src/renderer/: CMakeLists.txt
src/renderer/headers/: window.h
src/renderer/intern/: buffer.c  buffer.h  camera.c  camera.h  command_buffer.c  device_alloc.c  init.c  init.h  model.c  model.h  model_loading.c  model_loading.h  object.c  object.h  renderer.c  renderer.h  texture.c  ui.c  ui.h  wavefront.c
